--- a/first-app/src/app/greeter/greeter.component.html
+++ b/first-app/src/app/greeter/greeter.component.html
@@ -1,6 +1,6 @@
 <h3>Greeter</h3>
 <hr>
 <label for="">User Name :</label>
-<input type="text" #txtUserName>
-<input type="button" value="Greet" (click)="onGreetClick(txtUserName.value)">
+<input type="text" (input)="setUserName($event.target.value)">
+<input type="button" value="Greet" (click)="onGreetClick()">
 <div class="highlight">{{message}}</div>
