--- a/first-app/src/styles.css
+++ b/first-app/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+.positive{
+    color : green;
+}
+
+.negative{
+    color : red;
+}
