--- a/bug-tracker-app/src/app/bugs/bugs.component.html
+++ b/bug-tracker-app/src/app/bugs/bugs.component.html
@@ -5,12 +5,14 @@
 </section>
 <section class="sort">
     <label for="">Order By :</label>
-    <select name="" id="">
-        <option value=""></option>
-        <option value=""></option>
+    <select (change)="bugSortAttr = $event.target.value">
+        <option value="id">Id</option>
+        <option value="name">Name</option>
+        <option value="isClosed">Status</option>
+        <option value="createdAt">Created</option>
     </select>
     <label for="">Descending ? :</label>
-    <input type="checkbox" name="" id="">
+    <input type="checkbox" (change)="bugSortDesc = $event.target.checked">
 </section>
 <section class="edit">
     <label for="">Bug Name :</label>
@@ -21,13 +23,14 @@
     <input type="range" min="10" max="100" value="30" (input)="trimTextLength=$event.target.value" />
     <span> [{{trimTextLength}}] </span>
     <ol>
-        <li *ngFor="let bug of bugsList">
+        <li *ngFor="let bug of ( bugsList | sort:bugSortAttr:bugSortDesc ) ">
+            <pre>[ {{bug.id}} ]</pre>
             <span 
                 class="bugname"
                 (click)="onBugNameClick(bug)"
                 [ngClass]="{closed : bug.isClosed}"
             >
-                {{bug.name | trimText:trimTextLength}}
+                {{bug.name | trimText:trimTextLength}} 
             </span>
             <div class="datetime">{{bug.createdAt}}</div>
             <input type="button" value="Remove" (click)="onRemoveClick(bug)">
