--- a/bug-tracker-app/src/app/bugs/bugs.component.html
+++ b/bug-tracker-app/src/app/bugs/bugs.component.html
@@ -1,5 +1,5 @@
 <section class="stats">
-    <span class="closed">{{getClosedCount()}}</span>
+    <span class="closed">{{bugsList | closedCount}}</span>
     <span> / </span>
     <span>{{bugsList.length}}</span>
 </section>
@@ -16,8 +16,9 @@
 </section>
 <section class="edit">
     <label for="">Bug Name :</label>
-    <input type="text" #txtNewBugName>
-    <input type="button" value="Add New" (click)="onAddNewClick(txtNewBugName.value)">
+    <input type="text" (input)="newBugName = $event.target.value">
+    <span> [ {{newBugName.length}} ] </span>
+    <input type="button" value="Add New" (click)="onAddNewClick(newBugName)">
 </section>
 <section class="list">
     <input type="range" min="10" max="100" value="30" (input)="trimTextLength=$event.target.value" />
