--- a/bug-tracker-app/src/app/bugs/bugs.component.html
+++ b/bug-tracker-app/src/app/bugs/bugs.component.html
@@ -1,8 +1,4 @@
-<section class="stats">
-    <span class="closed">{{bugsList | closedCount}}</span>
-    <span> / </span>
-    <span>{{bugsList.length}}</span>
-</section>
+<app-bug-stats [bugs]="bugsList"></app-bug-stats>
 <section class="sort">
     <label for="">Order By :</label>
     <select (change)="bugSortAttr = $event.target.value">
