--- a/bug-tracker-app/src/app/bugs/bugs.component.html
+++ b/bug-tracker-app/src/app/bugs/bugs.component.html
@@ -10,12 +10,7 @@
     <label for="">Descending ? :</label>
     <input type="checkbox" (change)="bugSortDesc = $event.target.checked">
 </section>
-<section class="edit">
-    <label for="">Bug Name :</label>
-    <input type="text" (input)="newBugName = $event.target.value">
-    <span> [ {{newBugName.length}} ] </span>
-    <input type="button" value="Add New" (click)="onAddNewClick(newBugName)">
-</section>
+<app-bug-edit (bugAdded)="onNewBugAdded($event)"></app-bug-edit>
 <section class="list">
     <input type="range" min="10" max="100" value="30" (input)="trimTextLength=$event.target.value" />
     <span> [{{trimTextLength}}] </span>
@@ -29,7 +24,7 @@
             >
                 {{bug.name | trimText:trimTextLength}} 
             </span>
-            <div class="datetime">{{bug.createdAt }}</div>
+            <div class="datetime">{{ bug.createdAt | elapsed }}</div>
             <input type="button" value="Remove" (click)="onRemoveClick(bug)">
         </li>
     </ol>
